# leakix-mcp

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/scripts/: check-changelog-commit.sh  run-ci-per-commit.sh
.github/workflows/: changelog.yaml  ci-per-commit.yaml  ci.yml  shellcheck.yaml
src/leakix_mcp/: __init__.py  client.py  server.py
src/leakix_mcp/tools/: __init__.py  bulk_export.py  domain_lookup.py  exposure_report.py  find_related.py  helpers.py  host_lookup.py  list_plugins.py  list_subdomains.py  quick_recon.py  search_leaks.py  search_services.py
tests/: __init__.py  test_client.py
