[tool.poetry]
name = "leakix-mcp"
version = "0.1.0"
description = "MCP server for LeakIX API - security research and reconnaissance"
readme = "README.md"
license = "MIT"
authors = ["LeakIX <support@leakix.net>"]
keywords = ["mcp", "leakix", "security", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
packages = [{ include = "leakix_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
mcp = "^1.26.0"
httpx = "^0.28.1"
pydantic = "^2.12.5"
l9format = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.14"
mypy = "^1.19.1"

[tool.poetry.scripts]
leakix-mcp = "leakix_mcp.server:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "l9format.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "serde.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
