[project]
name = "leakix-mcp"
version = "0.1.0"
description = "MCP server for LeakIX API - security research and reconnaissance"
readme = "README.md"
license = "MIT"
authors = [{ name = "LeakIX", email = "support@leakix.net" }]
keywords = ["mcp", "leakix", "security", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "l9format>=2.0.0",
]

[project.scripts]
leakix-mcp = "leakix_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/leakix_mcp/", "LICENSE", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/leakix_mcp"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "l9format.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
